refactor: Update generateToken method in JwtTokenManager